# homework_python_web

./: .gitignore
homework_01/parser/: main.py  pyproject.toml
homework_02/loto/: pyproject.toml
homework_03/loto/: main.py  pyproject.toml
homework_03/loto/clases/: clases.py
homework_03/loto/tests/: conftest.py  test_clases.py
homework_04/blogproject/: README.md  docker-compose.yaml  main.py  pyproject.toml
homework_04/blogproject/blogproject/: database.py
homework_04/blogproject/templates/: about.html  author.html  base.html  main.html  post.html  posts.html
homework_04/blogproject/templates/posts/: post.html  posts.html
homework_04/blogproject/views/: authors.py
homework_04_05/blogproject/: postgres.env  pyproject.toml
homework_04_05/blogproject/blogproject/: __init__.py  mixins.py  post.py
homework_04_05/blogproject/templates/: index.html
homework_04_05/blogproject/tests/: conftest.py  test_models.py
homework_04_05/blogproject/views/: posts.py
homework_06/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
homework_06/blogproject/: database.py  user.py
homework_06/migrations/versions/: 843126f75f69_.py  cb7d71fe3c92_.py
homework_06/templates/: base.html  index.html
homework_06/templates/about/: about.html
homework_06/templates/auth/: login.html  signup.html
homework_06/templates/authors/: author.html
homework_06/templates/posts/: post.html  posts.html
homework_06/tests/: conftest.py  test_models.py
homework_06/views/: about.py  auth.py  authors.py  forms.py  posts.py
(+1 files in other folders)
