[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Andrey Perekosov <perekosov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
